--- a/NZ-Team/NZ-Team-wangge/nz-team-shop-provider/nz-team-shop-cart/src/main/resources/application.yml
+++ b/NZ-Team/NZ-Team-wangge/nz-team-shop-provider/nz-team-shop-cart/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   application:
     name: cart-service
 
+
   redis:
     host: 192.168.1.13
     port: 6379
@@ -21,9 +22,14 @@ eureka:
     lease-renewal-interval-in-seconds: 60
 
   datasource:
-    url: jdbc:mysql://localhost:3306/my-project-v1?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/qf-v6?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: root
+    driver-class-name: com.mysql.jdbc.Driver
+
+
+
+
 
 
 
